# hah4ton-mos-transport

./: .dockerignore  .gitignore  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
backend/DetectionAPI/: .gitignore  Camera.py  Detector.py  Dockerfile  app.py  requirements.txt
backend/apiserver/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
backend/apiserver/apiserver/: __init__.py  main.py
backend/apiserver/apiserver/app/: main.py
backend/apiserver/apiserver/app/api/v1/: api.py  router.py
backend/apiserver/apiserver/app/api/v1/endpoints/: __init__.py  router.py  routes.py  twogis.py
backend/apiserver/apiserver/app/api/v1/endpoints/routes/: __init__.py  routes.py
backend/apiserver/apiserver/app/api/v1/endpoints/status/: status.py
backend/apiserver/apiserver/app/api/v1/routes/: routes.py
backend/apiserver/apiserver/app/api/v1/schemas/: routes.py  status.py
backend/apiserver/apiserver/app/api/v1/status/: status.py
backend/apiserver/apiserver/app/services/: geocoder.py  public_transport.py  transport_workload.py  twogis_service.py
backend/apiserver/apiserver/config/: .secrets.toml.example  settings.py  settings.toml
data/: build.gradle.kts  consumer-rules.pro
deploy/: .env.example  README.md  docker-compose.yaml
domain/: consumer-rules.pro
frontend/: build.gradle.kts  gradle.properties
frontend/app/src/main/: AndroidManifest.xml
frontend/data/src/main/: AndroidManifest.xml
frontend/domain/: build.gradle.kts
frontend/gradle/wrapper/: gradle-wrapper.properties
(+56 files in other folders)
